--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -76,6 +76,24 @@
         &--neighboringMonth {
           color: rgb(150, 150, 150);
         }
+
+        &--viewing {
+          border-radius: 50%;
+          width: 6px;
+          height: 6px;
+          background-color: #A5DEE4;
+          display: inline-block;
+          margin: 0 2px;
+        }
+
+        &--auction {
+          border-radius: 50%;
+          width: 6px;
+          height: 6px;
+          background-color: #E87A90;
+          display: inline-block;
+          margin: 0 2px;
+        }
       }
     }
   }
