--- a/src/Calendar.less
+++ b/src/Calendar.less
@@ -77,6 +77,11 @@
           color: rgb(150, 150, 150);
         }
 
+        &--dot {
+          height: 6px;
+          display: block;
+        }
+
         &--viewing {
           border-radius: 50%;
           width: 6px;
@@ -93,7 +98,8 @@
           background-color: #E87A90;
           display: inline-block;
           margin: 0 2px;
-        }
+        }        
+        
       }
     }
   }
